--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     </head>
     <body>
         <h1>Star corp</h1>
-        Corin, me!
-        <p>I don't like wasps</p>
+        Corin Lansingh, me!
+        <p>I don't like wasps! Neither should you!</p>
         <h2>The best pets</h2>
         <ul>
             <li>Dog</li>
